<resources>
    <string name="app_name">Dentalize</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_description">Description</string>
    <string name="title_profile">Profile</string>
    <string name="name">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="Register">SignUp</string>
    <string name="username">username</string>
    <string name="dont_have_account">dont_have_account</string>
    <string name="signup">SignUp</string>
    <string name="SignUp">SignUp</string>
    <string name="login_here">Login_here</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="login">Login</string>
    <string name="email_hint">email</string>
    <string name="analyze">Analyze</string>
    <string name="detail_camera">detaul_camera</string>
    <string name="dentalize">Dentalize</string>
    <string name="detect">Detect your\nDental health</string>
    <string name="title">Description</string>
    <string name="image">image</string>
    <string name="history">History</string>
    <string name="date">Date: </string>
    <string name="text_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis vestibulum consectetur. Nunc euismod, lectus eu vestibulum cursus, eros justo tempus metus, sed suscipit libero nibh vitae erat. Sed urna magna, aliquam id nisi nec, volutpat ullamcorper nisl. Vivamus porta justo nibh, nec vestibulum orci ullamcorper vitae.</string>
    <string name="nama">Nama</string>
    <string name="empty_image_warning">empty_image_warning</string>
    <string name="camera_error">camera_error</string>
    <string name="maps">maps</string>
    <string name="normal_type">normal_type</string>
    <string name="satellite_type">satellite_type</string>
    <string name="terrain_type">terrain_type</string>
    <string name="hybrid_type">hybrid_type</string>
</resources>