<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".view.register.RegisterActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="-50dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginHorizontal="125dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp">

            </com.google.android.material.textfield.TextInputEditText>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp">

            </com.google.android.material.textfield.TextInputEditText>



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp">

            </com.google.android.material.textfield.TextInputEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/SignUp"
                android:layout_marginTop="18dp"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/light_green"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hyperlink_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Login"
                    android:textColor="@color/light_green"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>