<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_image_24"
            android:contentDescription="@string/image"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="210dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/light_green"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/light_green"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="530dp"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/analyze_Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="590dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/light_green"
        android:text="@string/analyze"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />
</androidx.cardview.widget.CardView>