<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".view.login.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/login1"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:orientation="vertical"
            android:padding="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="125dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp">

            </com.google.android.material.textfield.TextInputEditText>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_toggle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp">

            </com.google.android.material.textfield.TextInputEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Login"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/light_green"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hyperlink_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/light_green"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>